--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,19 +4,35 @@ Versions
 
   Next Release
   {
-    # CHANGE: Moved LHCb-specific Policy directory from DIRAC/ResourceStatusSystem
-    ResourceStatusSystem = rs_2010061001
 
-    # CHANGE: Production.py - Set the request ID for threaded production monitoring view.
-    # NEW: DiracLHCb.py - Added getDataByRun() method for Ganga.
-    Interfaces = if_2010060302
-    
+  }
+  
+  v5r6-pre1
+  {
+
     # NEW: You can set visible or invisible productions in the GUI. 
     # NEW: A new command line implemented which returns the ancestors.
     # NEW: The getFilesWithGivenDatasets return the files which correspond to a list of runs. 
     # NEW: The Gui allows the users to select files with different quality flags.
     # BUGFIX: The getDescendents was broken when one of the files have no replica flag. I just ignore the file which have no replica flag.
     BookkeepingSystem = bk_2010061101
+    
+    ConfigurationSystem = cs_2010052601
+    Core = co_2010053101
+    DataManagementSystem = dm_2010050701
+    
+    # CHANGE: Production.py - Set the request ID for threaded production monitoring view.
+    # NEW: DiracLHCb.py - Added getDataByRun() method for Ganga.
+    Interfaces = if_2010060302
+    
+    ProductionManagementSystem = pm_2010060101    
+    Workflow = wo_2010060701
+    
+    # CHANGE: Moved LHCb-specific Policy directory from DIRAC/ResourceStatusSystem
+    ResourceStatusSystem = rs_2010061001
+
+    SAMSystem = sa_2010052701
+    WorkloadManagementSystem = wm_2010012001
   }
   
   v5r5p2
@@ -36,6 +52,25 @@ Versions
     SAMSystem = sa_2010052701
     WorkloadManagementSystem = wm_2010012001
   }
+  
+  v5r6
+  {
+
+    BookkeepingSystem = bk_2010053102
+    ConfigurationSystem = cs_2010052601
+    Core = co_2010053101
+    DataManagementSystem = dm_2010050701
+    Interfaces = if_2010060101 
+    ProductionManagementSystem = pm_2010060101
+    Workflow = wo_2010060301
+    
+    # NEW: release notes
+    Web = we_2010060601
+    
+    ResourceStatusSystem = rs_2010052401
+    SAMSystem = sa_2010052701
+    WorkloadManagementSystem = wm_2010012001
+  } 
   
   v5r5p1
   {
