--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -33,6 +33,9 @@ Versions
 
     SAMSystem = sa_2010052701
     WorkloadManagementSystem = wm_2010012001
+    
+    # NEW: First tag of the LHCb specific Web Portal components
+    Web = we_2010060601
   }
   
   v5r5p2
