--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -18,14 +18,20 @@ Versions
     BookkeepingSystem = bk_2010061101
     
     ConfigurationSystem = cs_2010052601
+    
+    # NEW: new dirac-lhcb-check-software command
     Core = co_2010053101
-    DataManagementSystem = dm_2010050701
+    
+    # CHANGE: Increased efficiency of StorageUsageDB for insertions
+    DataManagementSystem = dm_2010061401
     
     # CHANGE: Production.py - Set the request ID for threaded production monitoring view.
     # NEW: DiracLHCb.py - Added getDataByRun() method for Ganga.
     Interfaces = if_2010060302
     
-    ProductionManagementSystem = pm_2010060101    
+    # NEW: Added setTransformationRunStatus() to the TransformationHandler,DB
+    ProductionManagementSystem = pm_2010061401    
+    
     Workflow = wo_2010060701
     
     # CHANGE: Moved LHCb-specific Policy directory from DIRAC/ResourceStatusSystem
