--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-
+    # NEW: Updates to StorageUsage components to make insertion more efficient
+    DataManagementSystem = dm_2010061501
   }
   
   v5r6-pre1
