--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,6 +6,9 @@ Versions
   {
     # NEW: Updates to StorageUsage components to make insertion more efficient
     DataManagementSystem = dm_2010061501
+    
+    # BUGFIX: The BKK book-mark was broken due to the UserProfile changes.  
+    BookkeepingSystem = bk_2010061501
   }
   
   v5r6-pre1
