--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,8 +7,8 @@ Versions
     # NEW: Updates to StorageUsage components to make insertion more efficient
     DataManagementSystem = dm_2010061501
     
-    # BUGFIX: The BKK book-mark was broken due to the UserProfile changes.  
-    BookkeepingSystem = bk_2010061501
+    # BUGFIX: I changed back the modification.  
+    BookkeepingSystem = bk_2010061502
   }
   
   v5r6-pre1
