add SAM tag version sa_2010061601
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@26311 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,38 +4,39 @@ Versions
 
   Next Release
   {
-     
+    # CHANGE add script to submit all SAM jobs without publishing results
+    SAMSystem = sa_2010061601
   }
-  
+
   v5r6-pre2
   {
 
-    # NEW: You can set visible or invisible productions in the GUI. 
+    # NEW: You can set visible or invisible productions in the GUI.
     # NEW: A new command line implemented which returns the ancestors.
-    # NEW: The getFilesWithGivenDatasets return the files which correspond to a list of runs. 
+    # NEW: The getFilesWithGivenDatasets return the files which correspond to a list of runs.
     # NEW: The Gui allows the users to select files with different quality flags.
     # BUGFIX: The getDescendents was broken when one of the files have no replica flag. I just ignore the file which have no replica flag.
-    # BUGFIX: The BKK book-mark was broken due to the UserProfile changes.  
+    # BUGFIX: The BKK book-mark was broken due to the UserProfile changes.
     BookkeepingSystem = bk_2010061501
-    
+
     ConfigurationSystem = cs_2010052601
-    
+
     # NEW: new dirac-lhcb-check-software command
     Core = co_2010053101
-    
+
     # NEW: Updates to StorageUsage components to make insertion more efficient
     DataManagementSystem = dm_2010061501
-    
+
     # CHANGE: Production.py - Set the request ID for threaded production monitoring view.
     # NEW: DiracLHCb.py - Added getDataByRun() method for Ganga.
     # CHANGE: The default for SystemConfig is switch to x86_64-slc5-gcc43-opt
     Interfaces = if_2010061501
-    
+
     # NEW: Added setTransformationRunStatus() to the TransformationHandler,DB
-    ProductionManagementSystem = pm_2010061401    
-    
+    ProductionManagementSystem = pm_2010061401
+
     Workflow = wo_2010060701
-    
+
     # CHANGE: Moved LHCb-specific Policy directory from DIRAC/ResourceStatusSystem
     ResourceStatusSystem = rs_2010061001
 
@@ -43,44 +44,44 @@ Versions
     WorkloadManagementSystem = wm_2010012001
 
   }
-  
+
   v5r6-pre1
   {
 
-    # NEW: You can set visible or invisible productions in the GUI. 
+    # NEW: You can set visible or invisible productions in the GUI.
     # NEW: A new command line implemented which returns the ancestors.
-    # NEW: The getFilesWithGivenDatasets return the files which correspond to a list of runs. 
+    # NEW: The getFilesWithGivenDatasets return the files which correspond to a list of runs.
     # NEW: The Gui allows the users to select files with different quality flags.
     # BUGFIX: The getDescendents was broken when one of the files have no replica flag. I just ignore the file which have no replica flag.
     BookkeepingSystem = bk_2010061101
-    
+
     ConfigurationSystem = cs_2010052601
-    
+
     # NEW: new dirac-lhcb-check-software command
     Core = co_2010053101
-    
+
     # CHANGE: Increased efficiency of StorageUsageDB for insertions
     DataManagementSystem = dm_2010061401
-    
+
     # CHANGE: Production.py - Set the request ID for threaded production monitoring view.
     # NEW: DiracLHCb.py - Added getDataByRun() method for Ganga.
     Interfaces = if_2010060302
-    
+
     # NEW: Added setTransformationRunStatus() to the TransformationHandler,DB
-    ProductionManagementSystem = pm_2010061401    
-    
+    ProductionManagementSystem = pm_2010061401
+
     Workflow = wo_2010060701
-    
+
     # CHANGE: Moved LHCb-specific Policy directory from DIRAC/ResourceStatusSystem
     ResourceStatusSystem = rs_2010061001
 
     SAMSystem = sa_2010052701
     WorkloadManagementSystem = wm_2010012001
-    
+
     # NEW: First tag of the LHCb specific Web Portal components
     Web = we_2010060601
   }
-  
+
   v5r5p2
   {
 
@@ -88,17 +89,17 @@ Versions
     ConfigurationSystem = cs_2010052601
     Core = co_2010053101
     DataManagementSystem = dm_2010050701
-    Interfaces = if_2010060101 
+    Interfaces = if_2010060101
     ProductionManagementSystem = pm_2010060101
-    
+
     # NEW: added STREAM_Merging_run template
     Workflow = wo_2010060701
-    
+
     ResourceStatusSystem = rs_2010052401
     SAMSystem = sa_2010052701
     WorkloadManagementSystem = wm_2010012001
   }
-  
+
   v5r6
   {
 
@@ -106,18 +107,18 @@ Versions
     ConfigurationSystem = cs_2010052601
     Core = co_2010053101
     DataManagementSystem = dm_2010050701
-    Interfaces = if_2010060101 
+    Interfaces = if_2010060101
     ProductionManagementSystem = pm_2010060101
     Workflow = wo_2010060301
-    
+
     # NEW: release notes
     Web = we_2010060601
-    
+
     ResourceStatusSystem = rs_2010052401
     SAMSystem = sa_2010052701
     WorkloadManagementSystem = wm_2010012001
-  } 
-  
+  }
+
   v5r5p1
   {
 
@@ -125,26 +126,26 @@ Versions
     ConfigurationSystem = cs_2010052601
     Core = co_2010053101
     DataManagementSystem = dm_2010050701
-    Interfaces = if_2010060101 
+    Interfaces = if_2010060101
     ProductionManagementSystem = pm_2010060101
-    
+
     # CHANGE: UserJobFinalization.py - As in production now disable Watchdog checks during upload of output data.
     Workflow = wo_2010060301
-    
+
     ResourceStatusSystem = rs_2010052401
     SAMSystem = sa_2010052701
     WorkloadManagementSystem = wm_2010012001
-  } 
-  
+  }
+
    v5r5
   {
 
     # BUGFIX: The getfileswithagivendataset should return all the files which have the starRun and endRun run number
-    # CHANGE: I changed the insertTag method: I allow to insert same tag name with different value. 
+    # CHANGE: I changed the insertTag method: I allow to insert same tag name with different value.
     #         The tags are sorted by inserted time stamp.
     # NEW: I return the runs which are started before end date and it is finished out of end date.
     # NEW: I added the run start and end time stamp to the getRunInformation method and the command line method too.
-    # CHANGE: The Bkk manager didn't insert the jobstart and jobend second, this modification add the second the 
+    # CHANGE: The Bkk manager didn't insert the jobstart and jobend second, this modification add the second the
     #         current Jobend and jobstart time stamp .
     # BUGFIX: The data quality value was a string before. It is a list or tuple now. The user can select data by using different quality flags.
     # BUGFIX: I check the EventStat value; if it is None, I will not use it.
@@ -156,21 +157,21 @@ Versions
     # CHANGE: ProductionOptions.py - Updates for Moore - the only project that doesn't allow to set DB tags with LHCbApp().
     # CHANGE: ProductionLogAnalysis.py - Updates for Moore - logging output had changed since the last usage in production.
     # CHANGE: Production.py - Updates to support usage of Moore in simulation production workflows.
-    # NEW: ProductionLogAnalysis.py - Updated to check for InputCopyStream for events output in DaVinci log files for the case of merging. 
+    # NEW: ProductionLogAnalysis.py - Updated to check for InputCopyStream for events output in DaVinci log files for the case of merging.
     # NEW: ProductionOptions.py - Now support merging with DaVinci.
     Core = co_2010053101
 
     DataManagementSystem = dm_2010050701
-    
+
     # CHANGE: Production.py - Updates to support usage of Moore in simulation production workflows.
-    # NEW: Production.py - Support DaVinci merging and setc workflow steps. 
-    # NEW: DiracLHCb.py - Added several new BK query methods to be used in Ganga.     
-    Interfaces = if_2010060101 
+    # NEW: Production.py - Support DaVinci merging and setc workflow steps.
+    # NEW: DiracLHCb.py - Added several new BK query methods to be used in Ganga.
+    Interfaces = if_2010060101
 
     # CHANGE: ProductionRequestDB to present the % complete of Parent request differently
     # NEW: Added setBookkeepingQueryEndRunForTransformation (TransformationDB.py, TransformationHandler.py) to allow setting EndRun for BKQuery
     # NEW: Created TransformationRuns table (TransformationDB.sql) mapping Transformations to Runs with status
-    # NEW: Added setTransformationRunsSite (TransformationDB.py,TransformationHandler.py) for setting the assigned site in TransformationRuns 
+    # NEW: Added setTransformationRunsSite (TransformationDB.py,TransformationHandler.py) for setting the assigned site in TransformationRuns
     #      table
     # NEW: Added getTransformationRuns (TransformationDB.py,TransformationHandler.py) for monitoring the TransformationRuns table
     # NEW: Added getTransformationRunStats (TransformationDB.py,TransformationHandler.py) for getting the files statuses for Trans/Run combos
@@ -201,7 +202,7 @@ Versions
     SAMSystem = sa_2010052701
 
     WorkloadManagementSystem = wm_2010012001
-  }   
+  }
 
   v5r4p1
   {
