--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,6 +6,45 @@ Versions
   {
   }
 
+  v5r6
+  {
+
+    # NEW: You can set visible or invisible productions in the GUI.
+    # NEW: A new command line implemented which returns the ancestors.
+    # NEW: The getFilesWithGivenDatasets return the files which correspond to a list of runs.
+    # NEW: The Gui allows the users to select files with different quality flags.
+    # BUGFIX: The getDescendents was broken when one of the files have no replica flag. I just ignore the file which have no replica flag.
+    # BUGFIX: The BKK book-mark was broken due to the UserProfile changes.
+    BookkeepingSystem = bk_2010061502
+
+    ConfigurationSystem = cs_2010052601
+
+    # NEW: new dirac-lhcb-check-software command
+    Core = co_2010053101
+
+    # NEW: Updates to StorageUsage components to make insertion more efficient
+    DataManagementSystem = dm_2010061501
+
+    # CHANGE: Production.py - Set the request ID for threaded production monitoring view.
+    # NEW: DiracLHCb.py - Added getDataByRun() method for Ganga.
+    # CHANGE: The default for SystemConfig is switch to x86_64-slc5-gcc43-opt
+    Interfaces = if_2010061501
+
+    # NEW: Added setTransformationRunStatus() to the TransformationHandler,DB
+    ProductionManagementSystem = pm_2010061401
+
+    Workflow = wo_2010060701
+
+    # CHANGE: Moved LHCb-specific Policy directory from DIRAC/ResourceStatusSystem
+    ResourceStatusSystem = rs_2010061001
+
+    # CHANGE add script to submit all SAM jobs without publishing results
+    SAMSystem = sa_2010061601
+    
+    WorkloadManagementSystem = wm_2010012001
+
+  }
+
   v5r6-pre3
   {
 
