Updated with recent mods.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@26799 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,6 +4,12 @@ Versions
 
   Next Release
   {
+  
+  # BUGFIX: Resolved issue of ANY being specified for system configuration
+  Core = core_2010070701
+  # CHANGE: Update default value of system config for productions to ANY
+  Interfaces = if_2010070701
+  
   }
 
   v5r6
