LHCbDIRAC/Workflow/wo_2010080701
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@26807 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,11 +5,15 @@ Versions
   Next Release
   {
   
-  # BUGFIX: Resolved issue of ANY being specified for system configuration
+  # BUGFIX: ProductionEnvironment.py - Resolved issue of ANY being specified for system configuration
   Core = core_2010070701
-  # CHANGE: Update default value of system config for productions to ANY
+  # CHANGE: Production.py - Update default value of system config for productions to ANY
   Interfaces = if_2010070701
-  
+
+  # NEW: UploadOutputData.py - Reregister real data on disk at CERN for data reconstruction jobs according to the computing model.
+  # NEW: GaudiApplication.py - Allow to set arbitrary options to gaudirun.py via a configuration setting (e.g. -T).
+  Workflow = wo_2010080701
+
   }
 
   v5r6
