Updated workflow tag.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@26817 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -11,8 +11,8 @@ Versions
   Interfaces = if_2010070701
 
   # NEW: UploadOutputData.py - Reregister real data on disk at CERN for data reconstruction jobs according to the computing model.
-  # NEW: GaudiApplication.py - Allow to set arbitrary options to gaudirun.py via a configuration setting (e.g. -T).
-  Workflow = wo_2010080701
+  # NEW: GaudiApplication.py - Allow to set arbitrary options to gaudirun.py via a setup dependent configuration setting (e.g. gaudirun.py -T).
+  Workflow = wo_2010071301
 
   }
 
