git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@26819 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -14,6 +14,8 @@ Versions
   # NEW: GaudiApplication.py - Allow to set arbitrary options to gaudirun.py via a setup dependent configuration setting (e.g. gaudirun.py -T).
   Workflow = wo_2010071301
 
+  # NEW: The Bkk allows to select data-sets by using data quality flags.
+  BookkeepingSystem = bk_2010071301
   }
 
   v5r6
