--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -16,6 +16,9 @@ Versions
 
   # NEW: The Bkk allows to select data-sets by using data quality flags.
   BookkeepingSystem = bk_2010071301
+
+    # CHANGE: Updated Configurations
+    ResourceStatusSystem = rs_2010071601
   }
 
   v5r6
