--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -19,6 +19,9 @@ Versions
 
     # CHANGE: Updated Configurations
     ResourceStatusSystem = rs_2010071601
+    
+    #CHANGE: Bulk publish of directories in storage usage
+    DataManagementSystem = dm_2010072201
   }
 
   v5r6
