--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -22,6 +22,9 @@ Versions
     
     #CHANGE: Bulk publish of directories in storage usage
     DataManagementSystem = dm_2010072201
+    
+    # CHANGE: Do not overwrite the MaxRetry in the DataRecoveryAgent.
+    ProductionManagementSystem = pm_2010072201
   }
 
   v5r6
