Updated Workflow / Interfaces.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@26967 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,17 +5,20 @@ Versions
   Next Release
   {
   
-  # BUGFIX: ProductionEnvironment.py - Resolved issue of ANY being specified for system configuration
-  Core = core_2010070701
-  # CHANGE: Production.py - Update default value of system config for productions to ANY
-  Interfaces = if_2010070701
-
-  # NEW: UploadOutputData.py - Reregister real data on disk at CERN for data reconstruction jobs according to the computing model.
-  # NEW: GaudiApplication.py - Allow to set arbitrary options to gaudirun.py via a setup dependent configuration setting (e.g. gaudirun.py -T).
-  Workflow = wo_2010071301
-
-  # NEW: The Bkk allows to select data-sets by using data quality flags.
-  BookkeepingSystem = bk_2010071301
+    # BUGFIX: ProductionEnvironment.py - Resolved issue of ANY being specified for system configuration
+    Core = core_2010070701
+    
+    # CHANGE: Production.py - Update default value of system config for productions to ANY
+    # NEW: DiracLHCb.py - Added bkMetadata method as requested by users.    
+    Interfaces = if_2010072301
+  
+    # NEW: UploadOutputData.py - Reregister real data on disk at CERN for data reconstruction jobs according to the computing model.
+    # NEW: GaudiApplication.py - Allow to set arbitrary options to gaudirun.py via a setup dependent configuration setting (e.g. gaudirun.py -T).
+    # BUGFIX: UserJobFinalization.py - Return an S_ERROR in the rare case that the user workflow has already failed
+    Workflow = wo_2010072301
+  
+    # NEW: The Bkk allows to select data-sets by using data quality flags.
+    BookkeepingSystem = bk_2010071301
 
     # CHANGE: Updated Configurations
     ResourceStatusSystem = rs_2010071601
