LHCbDIRAC/Core/co_2010072601
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27039 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,7 +7,7 @@ Versions
   
     # BUGFIX: ProductionEnvironment.py - Resolved issue of ANY being specified for system configuration
     # CHANGE: ProductionOptions.py - Remove special case for specifying Moore input data 
-    Core = core_2010072301
+    Core = co_2010072601
     
     # CHANGE: Production.py - Update default value of system config for productions to ANY
     # NEW: DiracLHCb.py - Added bkMetadata method as requested by users.    
