--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,31 +4,44 @@ Versions
 
   Next Release
   {
+ 
+  }
   
+  v5r7-pre1
+  {
+
+    # NEW: The Bkk allows to select data-sets by using data quality flags.
+    BookkeepingSystem = bk_2010071301
+    
+    ConfigurationSystem = cs_2010052601
+
     # BUGFIX: ProductionEnvironment.py - Resolved issue of ANY being specified for system configuration
     # CHANGE: ProductionOptions.py - Remove special case for specifying Moore input data 
     Core = co_2010072602
-    
+
+    #CHANGE: Bulk publish of directories in storage usage
+    DataManagementSystem = dm_2010072201
+
     # CHANGE: Production.py - Update default value of system config for productions to ANY
     # NEW: DiracLHCb.py - Added bkMetadata method as requested by users.    
     Interfaces = if_2010072301
-  
+
+    # CHANGE: Do not overwrite the MaxRetry in the DataRecoveryAgent.
+    ProductionManagementSystem = pm_2010072201
+
     # NEW: UploadOutputData.py - Reregister real data on disk at CERN for data reconstruction jobs according to the computing model.
     # NEW: GaudiApplication.py - Allow to set arbitrary options to gaudirun.py via a setup dependent configuration setting (e.g. gaudirun.py -T).
     # BUGFIX: UserJobFinalization.py - Return an S_ERROR in the rare case that the user workflow has already failed
     Workflow = wo_2010072301
-  
-    # NEW: The Bkk allows to select data-sets by using data quality flags.
-    BookkeepingSystem = bk_2010071301
 
     # CHANGE: Updated Configurations
     ResourceStatusSystem = rs_2010071601
+
+    # CHANGE add script to submit all SAM jobs without publishing results
+    SAMSystem = sa_2010061601
     
-    #CHANGE: Bulk publish of directories in storage usage
-    DataManagementSystem = dm_2010072201
-    
-    # CHANGE: Do not overwrite the MaxRetry in the DataRecoveryAgent.
-    ProductionManagementSystem = pm_2010072201
+    WorkloadManagementSystem = wm_2010012001
+
   }
 
   v5r6
