LHCbDIRAC/Interfaces/if_2010072701
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27101 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -23,9 +23,10 @@ Versions
     DataManagementSystem = dm_2010072201
 
     # CHANGE: Production.py - Update default value of system config for productions to ANY
-    # NEW: DiracLHCb.py - Added bkMetadata method as requested by users.    
-    Interfaces = if_2010072301
-
+    # NEW: DiracLHCb.py - Added bkMetadata method as requested by users.
+    # NEW: DiracLHCb.py - Added checkSites, checkSEs and gridWeather to allow users to check site and SE status.   
+    Interfaces = if_2010072701
+    
     # CHANGE: Do not overwrite the MaxRetry in the DataRecoveryAgent.
     ProductionManagementSystem = pm_2010072201
 
