--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -13,13 +13,20 @@ Versions
     # NEW: The Bkk allows to select data-sets by using data quality flags.
     BookkeepingSystem = bk_2010071301
     
-    ConfigurationSystem = cs_2010052601
+    # NEW: UsersAndGroups agent - send a mail if we need to delete USER in LFC
+    # BUGFIX: UsersAndGroups - when a user is new in the CS it was causing an error 
+    #         while generating mail message.
+    ConfigurationSystem = cs_2010072701
 
+    # FIX: diracEnv.(c)sh - change location of the GridEnv
     # BUGFIX: ProductionEnvironment.py - Resolved issue of ANY being specified for system configuration
     # CHANGE: ProductionOptions.py - Remove special case for specifying Moore input data 
-    Core = co_2010072602
+    # CHANGE: CombinedSoftwareInstallation - - Map system config ANY to a compatible 
+    #         platform for LHCb in all cases
+    Core = co_2010072701
 
-    #CHANGE: Bulk publish of directories in storage usage
+    # CHANGE: Bulk publish of directories in storage usage
+    # CHANGE: Agents - consider also /LocalSite/InstancePath as alternative to rootPath
     DataManagementSystem = dm_2010072201
 
     # CHANGE: Production.py - Update default value of system config for productions to ANY
@@ -28,7 +35,9 @@ Versions
     Interfaces = if_2010072701
     
     # CHANGE: Do not overwrite the MaxRetry in the DataRecoveryAgent.
-    ProductionManagementSystem = pm_2010072201
+    # CHANGE: Agents - consider also /LocalSite/InstancePath as alternative to rootPath
+    # FIX: ProductionRequestDB - URL to the Request page is fixed to support new convention
+    ProductionManagementSystem = pm_2010072701
 
     # NEW: UploadOutputData.py - Reregister real data on disk at CERN for data reconstruction jobs according to the computing model.
     # NEW: GaudiApplication.py - Allow to set arbitrary options to gaudirun.py via a setup dependent configuration setting (e.g. gaudirun.py -T).
