--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,9 @@ Versions
 
   Next Release
   {
- 
+ 	# NEW: use of accounting cached plots
+	# CHANGE: check frequency
+    ResourceStatusSystem = rs_2010072801
   }
   
   v5r7-pre1
