git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27269 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,6 +7,8 @@ Versions
  	# NEW: use of accounting cached plots
 	# CHANGE: check frequency
     ResourceStatusSystem = rs_2010072801
+  # NEW: more metadata has been added
+    BookkeepingSystem = bk_2010072801
   }
   
   v5r7-pre1
