LHCbDIRAC/Core/co_2010072901
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27277 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -9,6 +9,10 @@ Versions
     ResourceStatusSystem = rs_2010072801
   # NEW: more metadata has been added
     BookkeepingSystem = bk_2010072801
+
+  # CHANGE: CombinedSoftwareInstallation.py - Fix for local running in case where "ANY" is requested for the sytem config.
+  # CHANGE: ProductionOptions.py - A change to the DaVinci stripping options was requested. 
+  Core = co_2010072901  
   }
   
   v5r7-pre1
