Updated Workflow and Interfaces tags.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27287 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,15 +4,22 @@ Versions
 
   Next Release
   {
- 	# NEW: use of accounting cached plots
-	# CHANGE: check frequency
+   	# NEW: use of accounting cached plots
+  	# CHANGE: check frequency
     ResourceStatusSystem = rs_2010072801
-  # NEW: more metadata has been added
+    
+    # NEW: more metadata has been added
     BookkeepingSystem = bk_2010072801
-
-  # CHANGE: CombinedSoftwareInstallation.py - Fix for local running in case where "ANY" is requested for the sytem config.
-  # CHANGE: ProductionOptions.py - A change to the DaVinci stripping options was requested. 
-  Core = co_2010072901  
+  
+    # CHANGE: CombinedSoftwareInstallation.py - Fix for local running in case where "ANY" is requested for the sytem config.
+    # CHANGE: ProductionOptions.py - A change to the DaVinci stripping options was requested. 
+    Core = co_2010072901  
+  
+    # NEW: ModuleBase.py - Add possibility to abandon the output file from a given step if specified in the production definition.
+    Workflow = wo_2010072901
+    
+    # NEW: Production.py - Introduce flag to allow abandoning the output of a given step e.g. EXPRESS DaVinci step
+    Interfaces = if_2010072901
   }
   
   v5r7-pre1
