LHCbDIRAC/WorkloadManagementSystem/wm_2010073001
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27296 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,6 +5,9 @@ Versions
   Next Release
   {
 
+    # CHANGE: AncestorFilesAgent.py - Make a minor status message more succinct in case of failure
+    WorkloadManagementSystem = wm_2010073001
+
   }
   
   v5r7-pre2
