Add possibility to bypass the input data resolution mechanism if desired.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27342 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,6 +5,12 @@ Versions
   Next Release
   {
 
+    # NEW: LHCbJob.py - Added optional flag to bypass input data resolution mechanism for 'download' input data policy.
+    Interfaces = if_2010073001
+
+    # NEW: JobPathResolution.py - Allow to bypass input data resolution mechanism if desired.
+    Core = co_2010073001  
+
     # CHANGE: AncestorFilesAgent.py - Make a minor status message more succinct in case of failure
     WorkloadManagementSystem = wm_2010073001
 
