git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27347 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -13,7 +13,9 @@ Versions
 
     # CHANGE: AncestorFilesAgent.py - Make a minor status message more succinct in case of failure
     WorkloadManagementSystem = wm_2010073001
-
+    
+    #CHANGE: The replica flag checking has been removed from the getAllAncestors method.
+    BookkeepingSystem = bk_2010073001
   }
   
   v5r7-pre2
