git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27459 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-
+   # CHANGE: The Bkk Gui show the files which are OK by default.
+   BookkeepingSystem = bk_2010073001
   }
   
   v5r7-pre4
