--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,9 +4,67 @@ Versions
 
   Next Release
   {
-   # CHANGE: The Bkk Gui show the files which are OK by default.
-   BookkeepingSystem = bk_2010080201
+
   }
+  
+  v5r7
+  {
+
+    # NEW: The Bkk allows to select data-sets by using data quality flags.
+    # NEW: more metadata has been added
+    # CHANGE: The replica flag checking has been removed from the getAllAncestors method.
+    # CHANGE: The Bkk Gui show the files which are OK by default.
+    BookkeepingSystem = bk_2010080201
+    
+    # NEW: UsersAndGroups agent - send a mail if we need to delete USER in LFC
+    # BUGFIX: UsersAndGroups - when a user is new in the CS it was causing an error 
+    #         while generating mail message.
+    ConfigurationSystem = cs_2010072701
+
+    # FIX: diracEnv.(c)sh - change location of the GridEnv
+    # BUGFIX: ProductionEnvironment.py - Resolved issue of ANY being specified for system configuration
+    # CHANGE: ProductionOptions.py - Remove special case for specifying Moore input data 
+    # CHANGE: CombinedSoftwareInstallation - - Map system config ANY to a compatible 
+    #         platform for LHCb in all cases
+    # CHANGE: CombinedSoftwareInstallation.py - Fix for local running in case where "ANY" is requested for the sytem config.
+    # CHANGE: ProductionOptions.py - A change to the DaVinci stripping options was requested. 
+    # NEW: JobPathResolution.py - Allow to bypass input data resolution mechanism if desired.
+    Core = co_2010073001  
+
+    # CHANGE: Bulk publish of directories in storage usage
+    # CHANGE: Agents - consider also /LocalSite/InstancePath as alternative to rootPath
+    DataManagementSystem = dm_2010072201
+
+    # CHANGE: Production.py - Update default value of system config for productions to ANY
+    # NEW: DiracLHCb.py - Added bkMetadata method as requested by users.
+    # NEW: DiracLHCb.py - Added checkSites, checkSEs and gridWeather to allow users to check site and SE status.   
+    # NEW: Production.py - Introduce flag to allow abandoning the output of a given step e.g. EXPRESS DaVinci step
+    # NEW: LHCbJob.py - Added optional flag to bypass input data resolution mechanism for 'download' input data policy.
+    Interfaces = if_2010073001
+    
+    # CHANGE: Do not overwrite the MaxRetry in the DataRecoveryAgent.
+    # CHANGE: Agents - consider also /LocalSite/InstancePath as alternative to rootPath
+    # FIX: ProductionRequestDB - URL to the Request page is fixed to support new convention
+    ProductionManagementSystem = pm_2010072701
+
+    # NEW: UploadOutputData.py - Reregister real data on disk at CERN for data reconstruction jobs according to the computing model.
+    # NEW: GaudiApplication.py - Allow to set arbitrary options to gaudirun.py via a setup dependent configuration setting (e.g. gaudirun.py -T).
+    # BUGFIX: UserJobFinalization.py - Return an S_ERROR in the rare case that the user workflow has already failed
+    # NEW: ModuleBase.py - Add possibility to abandon the output file from a given step if specified in the production definition.
+    Workflow = wo_2010072901
+
+    # CHANGE: Updated Configurations
+    # NEW: use of accounting cached plots
+    # CHANGE: check frequency
+    ResourceStatusSystem = rs_2010072801 
+
+    # CHANGE add script to submit all SAM jobs without publishing results
+    SAMSystem = sa_2010061601
+    
+    # CHANGE: AncestorFilesAgent.py - Make a minor status message more succinct in case of failure
+    WorkloadManagementSystem = wm_2010073001
+
+  }    
   
   v5r7-pre4
   {
