LHCbDIRAC/SAMSystem/sa_2010080301 LHCbDIRAC/Interfaces/if_2010080301
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27516 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,6 +5,12 @@ Versions
   Next Release
   {
 
+    # NEW: LHCbJob.py - Add possibility to rename standard output and standard error files.
+    Interfaces = if_2010080301
+
+    # BUGFIX: TestApplications.py - Finally resolve SAM stdout issue by taking advantage of new features in Interfaces
+    SAMSystem = sa_2010080301
+    
   }
   
   v5r7
