LHCbDIRAC/Workflow/wo_2010080301
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27560 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,6 +5,9 @@ Versions
   Next Release
   {
    
+   # NEW: UserJobFinalization.py - Now allow wildcards in the output data specification as requested by users.
+   Workflow = wo_2010080301
+   
   }
   
   v5r7
