LHCbDIRAC/Interfaces/if_2010080302
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27571 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,8 +5,11 @@ Versions
   Next Release
   {
    
-   # NEW: UserJobFinalization.py - Now allow wildcards in the output data specification as requested by users.
-   Workflow = wo_2010080301
+    # NEW: UserJobFinalization.py - Now allow wildcards in the output data specification as requested by users.
+    Workflow = wo_2010080301
+   
+    # BUGFIX: Production.py - Minor change in a parameter name.
+    Interfaces = if_2010080302   
    
   }
   
