LHCbDIRAC/Workflow/wo_2010080401
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27589 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,7 +6,8 @@ Versions
   {
    
     # NEW: UserJobFinalization.py - Now allow wildcards in the output data specification as requested by users.
-    Workflow = wo_2010080301
+    # BUGFIX: UploadLogFile.py - Resolve failover upload of log files after the recent LogSE failures highlighted a problem.
+    Workflow = wo_2010080401
    
     # BUGFIX: Production.py - Minor change in a parameter name.
     Interfaces = if_2010080302   
