git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27646 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-   
+    # NEW: The Bkk propagate the data quality flag(the flag inherited from the input file) when the jobs types are Merge. 
+    BookkeepingSystem = bk_2010080601
   }
   
   v5r8-pre1
