--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,8 +4,19 @@ Versions
 
   Next Release
   {
+  
     # NEW: The Bkk propagate the data quality flag(the flag inherited from the input file) when the jobs types are Merge. 
     BookkeepingSystem = bk_2010080601
+    
+    # NEW: UserJobFinalization.py - Now allow wildcards in the output data specification as requested by users, only try to glob items with a wildcard.
+    # NEW: UserJobFinalization.py - Replication and registration now performed to a 2nd Tier-1 site via a hack to ensure that only the CERN catalog instances are active during the operation.
+    # NEW: BookkeepingReport.py - Add JobType parameter to allow the propagation of DQ flags in the merging production case as requested by the DQ team.
+    # NEW: GaudiApplication.py - Disable watchdog checks during merging production application steps.
+    Workflow = wo_2010080601
+   
+    # BUGFIX: Production.py - Minor change in a parameter name.
+    Interfaces = if_2010080302   
+           
   }
   
   v5r8-pre1
