--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,25 +4,16 @@ Versions
 
   Next Release
   {
-  
-    # NEW: The Bkk propagate the data quality flag(the flag inherited from the input file) when the jobs types are Merge. 
-    BookkeepingSystem = bk_2010080601
     
-    # NEW: UserJobFinalization.py - Now allow wildcards in the output data specification as requested by users, only try to glob items with a wildcard.
-    # NEW: UserJobFinalization.py - Replication and registration now performed to a 2nd Tier-1 site via a hack to ensure that only the CERN catalog instances are active during the operation.
-    # NEW: BookkeepingReport.py - Add JobType parameter to allow the propagation of DQ flags in the merging production case as requested by the DQ team.
-    # NEW: GaudiApplication.py - Disable watchdog checks during merging production application steps.
-    Workflow = wo_2010080601
-   
-    # BUGFIX: Production.py - Minor change in a parameter name.
-    Interfaces = if_2010080302   
-           
   }
   
   v5r8-pre1
   {
 
-    BookkeepingSystem = bk_2010080201
+    # NEW: The Bkk propagate the data quality flag (the flag inherited from the input file) when the jobs 
+    #      types are Merge. 
+    BookkeepingSystem = bk_2010080601
+    
     ConfigurationSystem = cs_2010072701
     Core = co_2010073001  
     DataManagementSystem = dm_2010072201
@@ -34,7 +25,11 @@ Versions
     
     # NEW: UserJobFinalization.py - Now allow wildcards in the output data specification as requested by users.
     # BUGFIX: UploadLogFile.py - Resolve failover upload of log files after the recent LogSE failures highlighted a problem.
-    Workflow = wo_2010080401
+    # NEW: UserJobFinalization.py - Now allow wildcards in the output data specification as requested by users, only try to glob items with a wildcard.
+    # NEW: UserJobFinalization.py - Replication and registration now performed to a 2nd Tier-1 site via a hack to ensure that only the CERN catalog instances are active during the operation.
+    # NEW: BookkeepingReport.py - Add JobType parameter to allow the propagation of DQ flags in the merging production case as requested by the DQ team.
+    # NEW: GaudiApplication.py - Disable watchdog checks during merging production application steps.
+    Workflow = wo_2010080601
     
     ResourceStatusSystem = rs_2010072801 
     SAMSystem = sa_2010080301
