LHCbDIRAC/Core/co_2010080601
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@27716 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,6 +5,10 @@ Versions
   Next Release
   {
     
+    
+    # BUGFIX: ProductionEnvironment.py - Correct formatting in print statement for case where LbLogin wasn't found in the local or shared areas.    
+    Core = co_2010080601
+
   }
   
   v5r8-pre1
